# ComfyUI-PrimitiveAnything

./: LICENSE  README.md  __init__.py  install.py  prestartup_script.py  pyproject.toml  requirements.txt
nodes/: __init__.py  load_model.py  preprocess.py  primitives.py  process.py  utils.py
primitive_anything/michelangelo/: __init__.py
primitive_anything/michelangelo/models/asl_diffusion/: asl_diffuser_pl_module.py  clip_asl_diffuser_pl_module.py
primitive_anything/michelangelo/models/tsal/: asl_pl_module.py  sal_pl_module.py
primitive_anything/michelangelo/utils/: misc.py
primitive_anything/utils/: __init__.py
workflows/: primitive_workflow.json
