[project]
name = "comfyui-primitiveanything"
description = "ComfyUI wrapper for PrimitiveAnything: decompose 3D shapes into primitive assemblies (cube, sphere, cylinder) using auto-regressive transformer. Bit of an academic exercise, let me know if you find anything useful about it"
version = "0.0.1"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    # Core dependencies
    "trimesh>=4.0.0",
    "numpy>=1.22.0",
    "scipy>=1.7.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",

    # HuggingFace for model downloading
    "huggingface_hub",
    "accelerate>=0.20.0",
    "transformers",

    # 3D processing
    "open3d>=0.17.0",
    "scikit-image>=0.20.0",
    "mesh2sdf",
    "mesh-to-sdf",
    "opencv-python>=4.5.0",

    # PrimitiveAnything model dependencies
    "beartype",
    "einops",
    "gateloop_transformer",
    "pytorch_custom_utils",
    "x_transformers",
    "toolz",
    "environs",
    "jaxtyping",
    "omegaconf",
    "pytorch_lightning",

    # Note: pytorch3d is installed separately via install.py
]

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-PrimitiveAnything"
Documentation = "https://github.com/PozzettiAndrea/ComfyUI-PrimitiveAnything#readme"
"Bug Tracker" = "https://github.com/PozzettiAndrea/ComfyUI-PrimitiveAnything/issues"

# ComfyUI Registry configuration
[tool.comfy]
PublisherId = "pznodes"
DisplayName = "PrimitiveAnything"
Icon = ""

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
